--- a/scss/_project-details.scss
+++ b/scss/_project-details.scss
@@ -38,23 +38,26 @@ main {
       margin-block: 2rem;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      // gap: 2rem;
       h1 {
         font-size: 8vmin;
         font-weight: 900;
         color: darken($light-color, 15%);
         flex: 0 0 calc(33% - 1rem);
+        margin-block-end: 2rem;
       }
       p {
         font-size: 3.5vmin;
         color: lighten($primary-color, 40%);
         flex: 0 0 calc(33% - 1rem);
+        margin-block-end: 2rem;
+
       }
       a {
         cursor: pointer;
         inline-size: max-content;
-        padding-block: 10px 14px;
-        padding-inline: 5vmin;
+        margin-block-end: 2rem;
+        padding: 10px 5vmin 14px ;
         flex: 0 0 calc(33% - 1rem);
         background: linear-gradient(
           -45deg,
