--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    // gap: 2rem;
 
     .text-secondary {
       flex: 0 0 calc(33% - 1rem);
@@ -24,6 +24,7 @@
       color: $light-color;
       opacity: 0;
       transform: translateX(-7rem);
+      margin-block-end: 2rem;
 
       animation: clear 2s forwards;
     }
