--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,10 +1,9 @@
 
 .logo {
   position: absolute;
-  top: 1rem;
+  top: 4vmin;
   left: 1rem;
-  block-size: 20px;
-  inline-size: 28px;
+  inline-size: 3.5vw;
   img {
     inline-size: 100%;
   }
