--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -8,13 +8,8 @@
     display: none;
   }
   .logo {
-    position: absolute;
-    top: 2rem;
-    left: 1rem;
-    inline-size: 1.5rem;
-    img {
-      inline-size: 100%;
-    }
+    inline-size: 1.2rem;
+    top: 5vmin;
   }
 
   /* NAV
