--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -11,7 +11,7 @@
         to right rgba($primary-color, 0),
         rgba($secondary-color, 0.4)
       ),
-      url(../img/fola.webp) center center/cover;
+      url(../img/fola-bio.jpeg) center center/cover;
 
     display: flex;
     flex-direction: column;
