--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -35,8 +35,7 @@
   }
   .btn {
     display: inline-block;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-family: $ff-detials-2;
     margin-block-start: 7rem;
     cursor: pointer;
     font-size: 0.8rem;
